--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <!-- SECTION -->
   <main id="container">
-    <section class="row" id="cash"></section>
+    <section class="row" id="cash">$0</section>
     <section class="row" id="router-view">
       <div onclick="app.UserController.addQuarter()" role="button" class="btn btn-primary col-12 col-md-6 fs-3">🪙</div>
     </section>
